# dummy_ml_repository

./: .gitigore  Dockerfile  config.yaml  readme.md  requirements.txt  run.py
iris_model/: CHANGELOG.md  config.py  pyproject.toml
iris_model/iris/: data_preprocessing.py  run.py
src/: data_preprocessing.py  model_inference.py  model_training.py
tests/: test_data_preprocessing.py
